# sem-5-ml-project

./: .gitignore  CODEBASE_REPORT.md  README.md  demo_pipeline.py  main.py  pyproject.toml
app/: __init__.py
app/core/: __init__.py  algorithms.py  data_exporter.py  file_utils.py  inference.py  landmark_extractor.py  landmark_pipeline.py  video_utils.py
app/preprocessing/: __init__.py  __main__.py  config.py  denoise.py  frame_extraction.py  keypoint_extraction.py  motion_mask.py  optical_flow.py  quality_checks.py  runner.py  sequence_normalizer.py  signer_crop.py  storage.py  video_normalizer.py
app/views/: __init__.py  _folder_browser.py  keyframe_page.py  landmark_page.py  manual_keyframe_page.py  predict_page.py  preprocessing_page.py
doc/: keyframe_extractor.md  landmark_extractor.md  pipeline_flow.md
docs/: Dryrun of Mother and Brother Samples.md  RAFT_GUIDE.md  classify_words.md  keyframe_extraction_pipeline.md  keyframe_extractor.md  landmark_extraction_pipeline.md  landmark_extractor.md  manual_keyframe_selection.md  pipeline_flow.md  preprocessing_pipeline.md  train_transformer.md  trainer_current_config_gpu.md
keyframe_extractor/: algorithms.py  app.py  data_exporter.py  file_utils.py  landmark_extractor.py  video_utils.py
keyframe_extractor/views/: keyframe_page.py  landmark_page.py
model/: WLASL_recognition_using_Action_Detection.ipynb  dataset.py  train_transformer.ipynb  trainer.py  trainer_current_config-gpu.py
util_scripts/: extract_keyframes.py  inspect_preprocessed.ipynb  run_full_pipeline.ipynb  run_full_pipeline.py
(+19 files in other folders)
